# VecOpt-Pass

./: .gitignore  CMakeLists.txt  README.md  run.sh
benchmarks/: blur.c  sad.c
hybrid/: CMakeLists.txt  driver.c  sad_kernel.c
hybrid/include/: sad.h
script/: mix_aes.sh  mix_basicmath.sh  mix_qsort.sh  run_mixed_benchmarks.sh  run_vector_bench.sh  run_vector_bench_copy.sh
src/: VecOpt.cpp  VecOpt.cpp.backup
veclangc/: CMakeLists.txt  ast.h  codegen.cpp  codegen.h  codegen_parser.cpp  lexer.h  main.cpp  parser.h  preprocessor.cpp  preprocessor.h
veclangc/mix_1/: kernel.c  kernel.h  qsort_clang  qsort_large.c  qsort_large_rest.c  qsort_mixed
veclangc/mix_2/: basicmath_large_rest.c  kernel_basicmath.c  kernel_basicmath.h  round.h
veclangc/mix_3/: aes_clang  aes_mixed  kernel_aes.c  rest_aes.c  subbytes_mixed
